// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on ListItem should match an snapshot for TypedListItem 'user' with that user being selected 1`] = `
<div
  className="list-item list-item--selected list-group-item"
  onClick={[Function]}
  role="listitem"
>
  <div
    className="user"
  >
    <span>
      Alice
    </span>
    <button
      className="btn btn-secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Unfollow
    </button>
  </div>
</div>
`;

exports[`Test on ListItem should match initial snapshot for TypedListItem 'post' 1`] = `
<div
  className="list-item list-group-item"
  onClick={[Function]}
  role="listitem"
>
  <div
    className="post card"
  >
    <div
      className="card-body"
    >
      <div
        className="post--title"
      >
        <div
          className="m-0 card-title h5"
        >
          Alice
        </div>
        <span>
          28 mar
        </span>
      </div>
      <p
        className="mb-0 card-text"
      >
        Lorem ipsum content large
      </p>
    </div>
  </div>
</div>
`;

exports[`Test on ListItem should match initial snapshot for TypedListItem 'user' 1`] = `
<div
  className="list-item list-group-item"
  onClick={[Function]}
  role="listitem"
>
  <div
    className="user"
  >
    <span>
      Alice
    </span>
    <button
      className="btn btn-secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Unfollow
    </button>
  </div>
</div>
`;
